fix: overflow-x and app layout align (#51)

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-height: 100vh;
+  justify-content: space-between;
+  overflow-x: hidden;
 }
 
 .app-main {
